# sqlalchemy-faircom

./: .gitignore  .gitignore"  CHANGELOG.md  LICENSE"  MANIFEST.in  README.md  README.md"  SUPERSET.md  pyproject.toml  pyproject.toml"  setup.py  setup.py"
examples/superset/: faircom_engine_spec.py  superset_config.py
faircom_jsonapi/: __init__.py  client.py  client.py"  dbapi.py  dbapi.py"  sqlalchemy_dialect.py  sqlalchemy_dialect.py"
tests/: test_dialect.py  test_skip_syntax.py  test_value_extraction.py
