[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-faircom"
version = "0.1.19"
description = "SQLAlchemy dialect for FairCom Database via JSON API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "FairCom Corporation", email = "support@faircom.com"}
]
keywords = ["sqlalchemy", "faircom", "database", "json-api", "db-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]

dependencies = [
    "sqlalchemy>=1.4",
    "requests>=2.25.0",
    "sqlparse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/toddstoffel/sqlalchemy-faircom"
Documentation = "https://github.com/toddstoffel/sqlalchemy-faircom"
Repository = "https://github.com/toddstoffel/sqlalchemy-faircom"
"Bug Tracker" = "https://github.com/toddstoffel/sqlalchemy-faircom/issues"

[project.entry-points."sqlalchemy.dialects"]
faircom = "faircom_jsonapi.sqlalchemy_dialect:FairComJSONDialect"

[tool.setuptools.packages.find]
where = ["."]
include = ["faircom_jsonapi*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
